<resources>

    <string name="app_name">ProjectThree_Java</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">ProjectThree_Java</string>
    <string name="please_enter_a_state">Please enter a state</string>
    <string name="search">Search</string>
    <string name="bkmk_it">Open Bookmarks</string>
    <string name="state_population_">State Population:</string>
    <string name="white_">White:</string>
    <string name="black_">Black:</string>
    <string name="native_american_">Native American:</string>
    <string name="other_">Other:</string>
    <string name="Bookmarks">Bookmarks</string>
    <string name="state">State:</string>
    <string name="add_to_bookmarks">Add to Bookmarks?</string>

    <string name="supposed_to_be_a_bookmarks_list_here">Supposed to be a bookmarks list here</string>
   
    
	<string-array name="state_name">
	<item>Alabama</item>
	<item>Alaska</item>
	<item></item>
	<item>Arizona</item>
	<item>Arkansas</item>
	<item>California</item>
	<item></item>
	<item>Colorado</item>
	<item>Connecticut</item>
	<item>Delaware</item>
	<item>District of Colombia</item>
	<item>Florida</item>
	<item>Georgia</item>
	<item ></item>
	<item>Hawaii</item>
	<item>Idaho</item>
	<item>Illinois</item>
	<item>Indiana</item>
	<item>Iowa</item>
	<item>Kansas</item>
	<item>Kentucky</item>
	<item>Louisiana</item>
	<item>Maine</item>
	<item>Maryland</item>
	<item>Massachusetts</item>
	<item>Michigan</item>
	<item>Minnesota</item>
	<item>Mississippi</item>
	<item>Missouri</item>
	<item>Montana</item>
	<item>Nebraska</item>
	<item>Nevada</item>
	<item>New Hampshire</item>
	<item>New Jersey</item>
	<item>New Mexico</item>
	<item>New York</item>
	<item>North Carolina</item>
	<item>North Dakota</item>
	<item>Ohio</item>
	<item>Oklahoma</item>
	<item>Oregon</item>
	<item>Pennsylvania</item>
	<item>Rhode Island</item>
	<item>South Carolina</item>
	<item>South Dakota</item>
	<item>Tennessee</item>
	<item>Texas</item>
	<item>Utah</item>
	<item>Vermont</item>
	<item>Virginia</item>
	<item>Washington</item>
	<item>West Virginia</item>
	<item>Wisconsin</item>
	<item>Wyoming</item>
	</string-array>
	<string name="go_to_bookmarks">Go to Bookmarks</string>
	<string name="enter_state_number">Enter State Code</string>
	<string name="state_codes_start_at_01_for_alabama_and_continue_in_order">state_codes_start_at_01_for_alabama_and_continue_in_order</string>
	<string name="state_name">state_name</string>


</resources>