<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <Spinner
			android:id="@+id/spinner"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:drawSelectorOnTop="true"
			android:entries="@array/state_name"/>

    </LinearLayout>

    <GridLayout
        android:id="@+id/statedata"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:columnCount="2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state" 
            android:textColor="@color/Red"/>

        <TextView
            android:id="@+id/state_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_population_"
            android:textColor="@color/Red" />

        <TextView
            android:id="@+id/state_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white_" 
            android:textColor="@color/Red"/>

        <TextView
            android:id="@+id/white_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black_"
            android:textColor="@color/Red" />

        <TextView
            android:id="@+id/black_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/native_american_"
            android:textColor="@color/Red" />

        <TextView
            android:id="@+id/native_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_"
            android:textColor="@color/Red" />

        <TextView
            android:id="@+id/other_pop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Red" />
    </GridLayout>
    <Button
        android:id="@+id/bookmarks_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_bookmarks"
        android:textColor="@color/Blue" />
    <Button
        android:id="@+id/addbkmk_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_bookmarks"
        android:textColor="@color/Blue" />

</LinearLayout>